Pic 2661 qa fix (#1072)
* PIC-2661

. Renamed cae marker model field name to match the json field from the CCM.
. Updated test.

* PIC-2661

. Removed not null constraint for case marker markerTypeDescription.

. Updated test.

* PIC-2661

. Renamed Plea, Verdict value to match JSON value
. Updated test.

* PIC-2661

. Updated pact test.